objects/advpm__Advologix_Global_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Activity_to_Time_Description_Content__c</fullName>
        <label>Activity to Time Description (Content)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Activity_to_Time_Description_Event__c</fullName>
        <label>Activity to Time Description (Event)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Activity_to_Time_Description_Task__c</fullName>
        <label>Activity to Time Description (Task)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__AdvoDoc_Apex_Callback_Method__c</fullName>
        <label>AdvoDoc Apex Callback Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__AdvoDoc_file_destination__c</fullName>
        <label>AdvoDoc file destination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Collapse_Grouped_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, the grouped events for multiple users in Matter Calendar and Matter Gantt will collapse into single event.</inlineHelpText>
        <label>Collapse Grouped Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Designate_All_Matter_Lookup_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designate all lookup fields by default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Key_Dates_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Key Dates on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Matter_Content_Auto_Chatter_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable/Disable this option to disable Content posting to chatter feed of the linked Matter.</inlineHelpText>
        <label>Disable Matter Content Auto Chatter Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Display_Charts_From_Cache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display charts in real-time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Display_Selected_Key_Dates_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designate all date fields by default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Enable_Time_Rounding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to round Time (In hours) based on the Incremental Rounding Value selected.</inlineHelpText>
        <label>Round the Hours on New Time Entries?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Files_and_Content_Panel_will_display__c</fullName>
        <label>Files and Content Panel will display:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Hide_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, then Tasks flagged as Email will not show in Matter Calendar and Matter Gantt views.</inlineHelpText>
        <label>Hide Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Incremental_Rounding_Value__c</fullName>
        <inlineHelpText>Round time up to nearest value in minutes.</inlineHelpText>
        <label>Incremental Rounding Value (in minutes):</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_multi_currency_validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matter multi-currency validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__My_Matters_Filter_By__c</fullName>
        <label>Focus Matters are determined by:</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__My_Matters_additional_global_filter__c</fullName>
        <label>Focus Matters additional global filter:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Participant_RT_Account__c</fullName>
        <label>Participant RT (Account)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Participant_RT_Contact__c</fullName>
        <label>Participant RT (Contact)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Participant_RT_User__c</fullName>
        <label>Participant RT (User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_Disable_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planner Disable Events?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_Disable_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planner Disable Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_Disable_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planner Disable Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_Kanban_Grouping_Field__c</fullName>
        <label>Matter Kanban grouping field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_VF_Page_Name_Events__c</fullName>
        <label>Planner VF Page Name (Events)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_VF_Page_Name_Tasks__c</fullName>
        <label>Planner VF Page Name (Tasks)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Planner_VF_Page_Name_Time__c</fullName>
        <label>Planner VF Page Name (Time)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Restrict_Timekeeper_on_Timesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Timekeeper on Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Show_Title_on_Charts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this field will &quot;hide&quot; titles on charts in &quot;At a Glance&quot; panel</inlineHelpText>
        <label>Show chart title?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Time_Description_Field_Api_Name__c</fullName>
        <label>Time Description field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Upload_new_Content_as__c</fullName>
        <label>Upload new files as?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Use_Fiscal_Quarters_Budget_Charts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this, to display Budget Quarter information charts based on Fiscal Year settings of your organization.</inlineHelpText>
        <label>Use Fiscal Quarters (Budget Charts)</label>
        <type>Checkbox</type>
    </fields>
    <label>Advologix Global Options</label>
</CustomObject>